# marble-mirror

./: .flake8  README.md  direct_control_stepper.py  gcode.py  marble_control.py  marble_mirror.py  pyproject.toml  requirements.txt  sensor_test.py  server.py  setup.py  stepper_test.py  test_marble_control.py  testmotor.py
marble_mirror/: cli.py  components.py  marble_mirror.py  mirror.py  planners.py
marble_mirror/hardware/: camera.py  gate.py  gcode.py
trash/: direct_control_stepper.py  mock_marble_control.py  setup.py  test_marble_control.py
trash?/: sensor_test.py
